--- a/base/style.css
+++ b/base/style.css
@@ -1,6 +1,7 @@
 html, body {
 	width: 100%;
 	height: 100%;
+	overflow: hidden;
 }
 
 html, body, ul, li {
@@ -18,30 +19,16 @@ body {
 	background: white;
 }
 
-@keyframes success {
-	0% {}
-	75% {background: lightgreen;}
-	100% {}
+/* UI */
+
+.home {
+	position: absolute;
+	z-index: 10;
+	top:5px;
+	left:5px;
 }
 
-.success {
-	animation-name: success;
-	animation-duration: 0.45s;
-	animation-iteration-count: 2;
-}
-
-@keyframes fail {
-	0% {}
-	75% {background: red;}
-	100% {}
-}
-
-.fail {
-	animation-name: fail;
-	animation-duration: 1s;
-}
-
-/* Buttons */
+/* Game Buttons */
 
 .btn {
 	height: 100%;
@@ -56,19 +43,62 @@ body {
   user-select: none;
 }
 
-	.btn img {
-		left:50%;
-		top:50%;
-		transform: translateX(-50%) translateY(-50%);
-		transform-origin: 50% 50%;
+	.btn .wrap {
 		position: relative;
-		max-width: 100%;
-		max-height: 100%;
-		pointer-events:none;
-
-		transition: all 0.5s ease-out;
+		height: 100%;
+		width: 100%;
+		transform-origin: 50% 50%;
 	}
 
-	.btn.rotate img {
+		.btn .wrap * {
+			left:50%;
+			top:50%;
+			transform: translateX(-50%) translateY(-50%);
+			position: relative;
+			max-width: 100%;
+			max-height: 100%;
+		}
 
-	}
+/* Animations */
+
+@keyframes rotate {
+	0% { transform:rotate(0deg); }
+	25% { transform:rotate(90deg); }
+	50% { transform:rotate(180deg); }
+	75% { transform:rotate(270deg); }
+	100% { transform:rotate(360deg); }
+}
+
+.rotate {
+	animation: rotate 3s linear infinite;
+}
+
+@keyframes beat {
+	0% { transform:scale(1, 1); }
+	30% { transform:scale(1.2, 1.2); }
+	80% { transform:scale(0.9, 0.9); }
+}
+
+.beat {
+	animation: beat 0.5s linear;
+}
+
+@keyframes success {
+	0% {}
+	75% {background: lightgreen;}
+	100% {}
+}
+
+.success {
+	animation: success 0.45s 2;
+}
+
+@keyframes fail {
+	0% {}
+	75% {background: red;}
+	100% {}
+}
+
+.fail {
+	animation: fail 1s;
+}
