--- a/base/style.css
+++ b/base/style.css
@@ -1,3 +1,4 @@
+/* General */
 html, body {
 	width: 100%;
 	height: 100%;
@@ -13,10 +14,12 @@ html, body, ul, li {
 	box-sizing:border-box;
 }
 
-/* Root */
-
 body {
 	background: white;
+}
+
+img {
+	pointer-events:none;
 }
 
 /* UI */
